color doc center contrast icon

--- a/packages/web/src/app/doc-pages/other-pages/color-doc/color-doc.component.html
+++ b/packages/web/src/app/doc-pages/other-pages/color-doc/color-doc.component.html
@@ -68,12 +68,18 @@
                   align-items: flex-start;
                 "
               >
-                <div *ngIf="item.contrastBlack !== ''">
-                  <i class="e-icon e-icon--check_circle-filled-color e-icon--xs" aria-hidden="true"></i>
+                <div *ngIf="item.contrastBlack !== ''" style="display: inline-flex; align-items: center">
+                  <i
+                    class="e-icon e-icon--check_circle-filled-color e-icon--xs e-mr-4"
+                    aria-hidden="true"
+                  ></i>
                   Black ({{ item.contrastBlack }})
                 </div>
-                <div *ngIf="item.contrastWhite !== ''">
-                  <i class="e-icon e-icon--check_circle-filled-color e-icon--xs" aria-hidden="true"></i>
+                <div *ngIf="item.contrastWhite !== ''" style="display: inline-flex; align-items: center">
+                  <i
+                    class="e-icon e-icon--check_circle-filled-color e-icon--xs e-mr-4"
+                    aria-hidden="true"
+                  ></i>
                   White ({{ item.contrastWhite }})
                 </div>
               </div>
@@ -156,12 +162,18 @@
                   align-items: flex-start;
                 "
               >
-                <div *ngIf="item.contrastBlack !== ''">
-                  <i class="e-icon e-icon--check_circle-filled-color e-icon--xs" aria-hidden="true"></i>
+                <div *ngIf="item.contrastBlack !== ''" style="display: inline-flex; align-items: center">
+                  <i
+                    class="e-icon e-icon--check_circle-filled-color e-icon--xs e-mr-4"
+                    aria-hidden="true"
+                  ></i>
                   Black ({{ item.contrastBlack }})
                 </div>
-                <div *ngIf="item.contrastWhite !== ''">
-                  <i class="e-icon e-icon--check_circle-filled-color e-icon--xs" aria-hidden="true"></i>
+                <div *ngIf="item.contrastWhite !== ''" style="display: inline-flex; align-items: center">
+                  <i
+                    class="e-icon e-icon--check_circle-filled-color e-icon--xs e-mr-4"
+                    aria-hidden="true"
+                  ></i>
                   White ({{ item.contrastWhite }})
                 </div>
               </div>
@@ -246,12 +258,18 @@
                   align-items: flex-start;
                 "
               >
-                <div *ngIf="item.contrastBlack !== ''">
-                  <i class="e-icon e-icon--check_circle-filled-color e-icon--xs" aria-hidden="true"></i>
+                <div *ngIf="item.contrastBlack !== ''" style="display: inline-flex; align-items: center">
+                  <i
+                    class="e-icon e-icon--check_circle-filled-color e-icon--xs e-mr-4"
+                    aria-hidden="true"
+                  ></i>
                   Black ({{ item.contrastBlack }})
                 </div>
-                <div *ngIf="item.contrastWhite !== ''">
-                  <i class="e-icon e-icon--check_circle-filled-color e-icon--xs" aria-hidden="true"></i>
+                <div *ngIf="item.contrastWhite !== ''" style="display: inline-flex; align-items: center">
+                  <i
+                    class="e-icon e-icon--check_circle-filled-color e-icon--xs e-mr-4"
+                    aria-hidden="true"
+                  ></i>
                   White ({{ item.contrastWhite }})
                 </div>
               </div>
@@ -334,12 +352,18 @@
                   align-items: flex-start;
                 "
               >
-                <div *ngIf="item.contrastBlack !== ''">
-                  <i class="e-icon e-icon--check_circle-filled-color e-icon--xs" aria-hidden="true"></i>
+                <div *ngIf="item.contrastBlack !== ''" style="display: inline-flex; align-items: center">
+                  <i
+                    class="e-icon e-icon--check_circle-filled-color e-icon--xs e-mr-4"
+                    aria-hidden="true"
+                  ></i>
                   Black ({{ item.contrastBlack }})
                 </div>
-                <div *ngIf="item.contrastWhite !== ''">
-                  <i class="e-icon e-icon--check_circle-filled-color e-icon--xs" aria-hidden="true"></i>
+                <div *ngIf="item.contrastWhite !== ''" style="display: inline-flex; align-items: center">
+                  <i
+                    class="e-icon e-icon--check_circle-filled-color e-icon--xs e-mr-4"
+                    aria-hidden="true"
+                  ></i>
                   White ({{ item.contrastWhite }})
                 </div>
               </div>
