--- a/packages/elvis/src/utilities/grid.scss
+++ b/packages/elvis/src/utilities/grid.scss
@@ -28,7 +28,7 @@ THE SOFTWARE.
 */
 
 @use 'breakpoints';
-@use '../../node_modules/bootstrap/scss/bootstrap-grid.scss' with (
+@use 'bootstrap/scss/bootstrap-grid.scss' with (
   // Defining variables for grid that will overwrite bootstraps variables
   $grid-breakpoints: (xs: 0, sm: 320px, md: 768px, lg: 1024px, xl: 1440px),
   $grid-columns: 12,
