--- a/packages/web/src/app/doc-pages/other-pages/contact/contact.component.html
+++ b/packages/web/src/app/doc-pages/other-pages/contact/contact.component.html
@@ -19,6 +19,7 @@
               *ngIf="!loadedImgKri"
             ></div>
             <img
+              alt="Kristin"
               class="profile-image"
               src="./../../../../assets/contact/Kristin.png"
               (load)="hideContentLoader($event, 'kri')"
@@ -33,7 +34,7 @@
             <div class="profile-slack-button">
               <a class="e-btn e-btn--tertiary" href="slack://user?team=TU3R0B42K&id=U035607MEJG">
                 <span class="e-btn__icon">
-                  <img src="./../../../../assets/contact/figma-icon.svg" />
+                  <img alt="" src="./../../../../assets/contact/figma-icon.svg" />
                 </span>
                 <span class="e-btn__title">Slack Kristin</span>
               </a>
@@ -51,6 +52,7 @@
               *ngIf="!loadedImgFri"
             ></div>
             <img
+              alt="Fride"
               class="profile-image"
               src="./../../../../assets/contact/Fride.jpg"
               (load)="hideContentLoader($event, 'fri')"
@@ -65,7 +67,7 @@
             <div class="profile-slack-button">
               <a class="e-btn e-btn--tertiary" href="slack://user?team=TU3R0B42K&id=U01BLN1QTHD">
                 <span class="e-btn__icon">
-                  <img src="./../../../../assets/contact/figma-icon.svg" />
+                  <img alt="" src="./../../../../assets/contact/figma-icon.svg" />
                 </span>
                 <span class="e-btn__title">Slack Fride</span>
               </a>
@@ -83,6 +85,7 @@
               *ngIf="!loadedImgMic"
             ></div>
             <img
+              alt="Trygve"
               class="profile-image"
               src="./../../../../assets/contact/Trygve.png"
               (load)="hideContentLoader($event, 'mic')"
@@ -97,7 +100,7 @@
             <div class="profile-slack-button">
               <a class="e-btn e-btn--tertiary" href="slack://user?team=TU3R0B42K&id=U02M1T23PJM">
                 <span class="e-btn__icon">
-                  <img src="./../../../../assets/contact/figma-icon.svg" />
+                  <img alt="" src="./../../../../assets/contact/figma-icon.svg" />
                 </span>
                 <span class="e-btn__title">Slack Trygve</span>
               </a>
@@ -115,6 +118,7 @@
           ></div>
           <div>
             <img
+              alt="Viljar"
               class="profile-image"
               src="./../../../../assets/contact/Viljar.png"
               (load)="hideContentLoader($event, 'pat')"
@@ -129,7 +133,7 @@
             <div class="profile-slack-button">
               <a class="e-btn e-btn--tertiary" href="slack://user?team=TU3R0B42K&id=U02HB13D551">
                 <span class="e-btn__icon">
-                  <img src="./../../../../assets/contact/figma-icon.svg" />
+                  <img alt="" src="./../../../../assets/contact/figma-icon.svg" />
                 </span>
                 <span class="e-btn__title">Slack Viljar</span>
               </a>
@@ -147,6 +151,7 @@
               *ngIf="!loadedImgHil"
             ></div>
             <img
+              alt="Hilde"
               class="profile-image"
               src="./../../../../assets/contact/Hilde.jpg"
               (load)="hideContentLoader($event, 'hil')"
@@ -161,7 +166,7 @@
             <div class="profile-slack-button">
               <a class="e-btn e-btn--tertiary" href="slack://user?team=TU3R0B42K&id=U01A2FKJYCQ">
                 <span class="e-btn__icon">
-                  <img src="./../../../../assets/contact/figma-icon.svg" />
+                  <img alt="" src="./../../../../assets/contact/figma-icon.svg" />
                 </span>
                 <span class="e-btn__title">Slack Hilde</span>
               </a>
@@ -179,6 +184,7 @@
               *ngIf="!loadedImgMar"
             ></div>
             <img
+              alt="Martin"
               class="profile-image"
               src="./../../../../assets/contact/Martin.svg"
               (load)="hideContentLoader($event, 'mar')"
@@ -193,7 +199,7 @@
             <div class="profile-slack-button">
               <a class="e-btn e-btn--tertiary" href="slack://user?team=TU3R0B42K&id=U01CE89DQ9Z">
                 <span class="e-btn__icon">
-                  <img src="./../../../../assets/contact/figma-icon.svg" />
+                  <img alt="" src="./../../../../assets/contact/figma-icon.svg" />
                 </span>
                 <span class="e-btn__title">Slack Martin</span>
               </a>
