Email change Kristin

--- a/packages/web/src/app/doc-pages/other-pages/contact/contact.component.html
+++ b/packages/web/src/app/doc-pages/other-pages/contact/contact.component.html
@@ -29,7 +29,7 @@
             <div class="e-title-caps">Developer & Team leader</div>
             <div class="e-title-sm e-mt-8">Kristin Pettersen</div>
             <div class="e-text-description" style="margin-top: 4px; margin-bottom: 16px">
-              julie.kristin.pettersen@elvia.no
+              kristin.pettersen@elvia.no
             </div>
             <div class="profile-slack-button">
               <a class="e-btn e-btn--tertiary" href="slack://user?team=TU3R0B42K&id=U035607MEJG">
