Updated emoji Trygve

--- a/packages/web/src/app/doc-pages/other-pages/contact/contact.component.html
+++ b/packages/web/src/app/doc-pages/other-pages/contact/contact.component.html
@@ -79,7 +79,7 @@
       <div class="contact-profile-container trygve">
         <div class="contact-profile">
           <div style="position: relative">
-            <div class="profile-emoji">🐌</div>
+            <div class="profile-emoji">🐐</div>
             <div
               class="e-content-loader e-content-loader--circle profile-image-loader"
               *ngIf="!loadedImgMic"
