--- a/packages/web/src/app/doc-pages/other-pages/contact/contact.component.html
+++ b/packages/web/src/app/doc-pages/other-pages/contact/contact.component.html
@@ -10,7 +10,40 @@
 <div class="page-body">
   <app-component-subsection>
     <ng-container ngProjectAs="sectionContent">
-      <div class="contact-profile-container">
+      <div class="contact-profile-container kristin">
+        <div class="contact-profile kristin">
+          <div style="position: relative">
+            <div class="profile-emoji">🐨</div>
+            <div
+              class="e-content-loader e-content-loader--circle profile-image-loader"
+              *ngIf="!loadedImgKri"
+            ></div>
+            <img
+              alt="Kristin"
+              class="profile-image"
+              src="./../../../../assets/contact/Kristin.png"
+              (load)="hideContentLoader($event, 'kri')"
+            />
+          </div>
+          <div class="profile-info">
+            <div class="e-title-caps">Developer & Team leader</div>
+            <div class="e-title-sm e-mt-8">Kristin Pettersen</div>
+            <div class="e-text-description" style="margin-top: 4px; margin-bottom: 16px">
+              kristin.pettersen@elvia.no
+            </div>
+            <div class="profile-slack-button">
+              <a class="e-btn e-btn--tertiary" href="slack://user?team=TU3R0B42K&id=U035607MEJG">
+                <span class="e-btn__icon">
+                  <img alt="" src="./../../../../assets/contact/figma-icon.svg" />
+                </span>
+                <span class="e-btn__title">Slack Kristin</span>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="contact-profile-container fride">
         <div class="contact-profile fride">
           <div style="position: relative">
             <div class="profile-emoji">🐡</div>
@@ -19,13 +52,14 @@
               *ngIf="!loadedImgFri"
             ></div>
             <img
+              alt="Fride"
               class="profile-image"
               src="./../../../../assets/contact/Fride.jpg"
               (load)="hideContentLoader($event, 'fri')"
             />
           </div>
           <div class="profile-info">
-            <div class="e-title-caps">Developer & Team leader</div>
+            <div class="e-title-caps">Developer</div>
             <div class="e-title-sm e-mt-8">Fride Skarseth</div>
             <div class="e-text-description" style="margin-top: 4px; margin-bottom: 16px">
               fride.skarseth@elvia.no
@@ -33,7 +67,7 @@
             <div class="profile-slack-button">
               <a class="e-btn e-btn--tertiary" href="slack://user?team=TU3R0B42K&id=U01BLN1QTHD">
                 <span class="e-btn__icon">
-                  <img src="./../../../../assets/contact/figma-icon.svg" />
+                  <img alt="" src="./../../../../assets/contact/figma-icon.svg" />
                 </span>
                 <span class="e-btn__title">Slack Fride</span>
               </a>
@@ -45,12 +79,13 @@
       <div class="contact-profile-container trygve">
         <div class="contact-profile">
           <div style="position: relative">
-            <div class="profile-emoji">🐌</div>
+            <div class="profile-emoji">🐐</div>
             <div
               class="e-content-loader e-content-loader--circle profile-image-loader"
               *ngIf="!loadedImgMic"
             ></div>
             <img
+              alt="Trygve"
               class="profile-image"
               src="./../../../../assets/contact/Trygve.png"
               (load)="hideContentLoader($event, 'mic')"
@@ -65,7 +100,7 @@
             <div class="profile-slack-button">
               <a class="e-btn e-btn--tertiary" href="slack://user?team=TU3R0B42K&id=U02M1T23PJM">
                 <span class="e-btn__icon">
-                  <img src="./../../../../assets/contact/figma-icon.svg" />
+                  <img alt="" src="./../../../../assets/contact/figma-icon.svg" />
                 </span>
                 <span class="e-btn__title">Slack Trygve</span>
               </a>
@@ -83,6 +118,7 @@
           ></div>
           <div>
             <img
+              alt="Viljar"
               class="profile-image"
               src="./../../../../assets/contact/Viljar.png"
               (load)="hideContentLoader($event, 'pat')"
@@ -97,7 +133,7 @@
             <div class="profile-slack-button">
               <a class="e-btn e-btn--tertiary" href="slack://user?team=TU3R0B42K&id=U02HB13D551">
                 <span class="e-btn__icon">
-                  <img src="./../../../../assets/contact/figma-icon.svg" />
+                  <img alt="" src="./../../../../assets/contact/figma-icon.svg" />
                 </span>
                 <span class="e-btn__title">Slack Viljar</span>
               </a>
@@ -115,6 +151,7 @@
               *ngIf="!loadedImgHil"
             ></div>
             <img
+              alt="Hilde"
               class="profile-image"
               src="./../../../../assets/contact/Hilde.jpg"
               (load)="hideContentLoader($event, 'hil')"
@@ -129,7 +166,7 @@
             <div class="profile-slack-button">
               <a class="e-btn e-btn--tertiary" href="slack://user?team=TU3R0B42K&id=U01A2FKJYCQ">
                 <span class="e-btn__icon">
-                  <img src="./../../../../assets/contact/figma-icon.svg" />
+                  <img alt="" src="./../../../../assets/contact/figma-icon.svg" />
                 </span>
                 <span class="e-btn__title">Slack Hilde</span>
               </a>
@@ -147,6 +184,7 @@
               *ngIf="!loadedImgMar"
             ></div>
             <img
+              alt="Martin"
               class="profile-image"
               src="./../../../../assets/contact/Martin.svg"
               (load)="hideContentLoader($event, 'mar')"
@@ -161,7 +199,7 @@
             <div class="profile-slack-button">
               <a class="e-btn e-btn--tertiary" href="slack://user?team=TU3R0B42K&id=U01CE89DQ9Z">
                 <span class="e-btn__icon">
-                  <img src="./../../../../assets/contact/figma-icon.svg" />
+                  <img alt="" src="./../../../../assets/contact/figma-icon.svg" />
                 </span>
                 <span class="e-btn__title">Slack Martin</span>
               </a>
