--- a/packages/web/src/app/doc-pages/components/accordion-doc/accordion-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/accordion-doc/accordion-doc.component.html
@@ -17,6 +17,13 @@
     alignedTop="true"
   ></app-component-example-generator>
 
+  <!--CHANGELOG-->
+  <app-component-section [sectionTitle]="'Changelog'">
+    <ng-container ngProjectAs="sectionContent">
+      <app-component-changelog [componentData]="componentData"></app-component-changelog>
+    </ng-container>
+  </app-component-section>
+
   <!--USAGE-->
   <app-component-section [sectionTitle]="'Usage'">
     <ng-container ngProjectAs="sectionContent">
