--- a/packages/web/src/app/shared/component-documentation/component-changelog/component-changelog.component.html
+++ b/packages/web/src/app/shared/component-documentation/component-changelog/component-changelog.component.html
@@ -1,4 +1,4 @@
 <!--BODY-->
 <div class="page-body">
-  <div class="documentation-section-animation e-mt-24" markdown [src]="'assets/elvis/CHANGELOG.md'"></div>
+  <div class="documentation-section-animation e-mt-24" markdown [src]="changelogSrc"></div>
 </div>
