--- a/packages/elvis/css/elvis.css
+++ b/packages/elvis/css/elvis.css
@@ -6884,6 +6884,9 @@ input:focus {
   width: calc(100% + 8px);
   height: calc(100% + 8px);
 }
+.e-toggle input[type=checkbox] {
+  -moz-appearance: initial;
+}
 .e-toggle__input {
   position: relative;
   width: 32px;
