--- a/packages/elvis/src/components/form/toggle.scss
+++ b/packages/elvis/src/components/form/toggle.scss
@@ -42,6 +42,10 @@ $toggle-inverted-slider-padding: calc((#{$toggle-inverted-height} - #{$toggle-sl
     height: calc(100% + 8px);
   }
 
+  & input[type='checkbox'] {
+    -moz-appearance: initial;
+  }
+
   &__input {
     position: relative;
     width: $toggle-width;
