gulpfile now generates elviaColors.(json|scss)

--- a/packages/elvis-colors/src/elviaColors.scss
+++ b/packages/elvis-colors/src/elviaColors.scss
@@ -1,15 +1,20 @@
 $ElviaWhite: #fff;
 $ElviaOn: $ElviaWhite;
 $FontColorLight: $ElviaWhite;
+$ElviaFontColorLight: $ElviaWhite;
+$ElviaInverted: $ElviaWhite;
 $ElviaBlack: #000;
 $ElviaOff: $ElviaBlack;
 $ElviaFontColor: $ElviaBlack;
 $ElviaGrey: #262626;
+$ElviaDark: $ElviaGrey;
 $ElviaGreen: #29d305;
 $ElviaCharge: $ElviaGreen;
 $ElviaYellow: #ffff00;
 $ElviaOrange: #ffa000;
+$ElviaWarning: $ElviaOrange;
 $ElviaRed: #ee0701;
+$ElviaError: $ElviaRed;
 $ElviaGreenApple: #21ac04;
 $ElviaVioletGrape: #490192;
 $ElviaBlueBerry: #006ddb;
@@ -19,12 +24,15 @@ $ElviaRedTomato: #b90202;
 $ElviaGrey90: #3b3b3b;
 $ElviaGrey80: #515151;
 $ElviaFontGrey: $ElviaGrey80;
+$ElviaTextLight: $ElviaGrey80;
 $ElviaGrey70: #676767;
+$ElviaPlaceholder: $ElviaGrey70;
 $ElviaGrey60: #7c7c7c;
 $ElviaGrey50: #929292;
 $ElviaGrey40: #a8a8a8;
 $ElviaGrey30: #bdbdbd;
 $ElviaDisabled: $ElviaGrey30;
+$ElviaLightInverted: $ElviaGrey30;
 $ElviaGrey20: #d3d3d3;
 $ElviaGrey10: #e9e9e9;
 $ElviaGrey05: #f4f4f4;
