--- a/packages/web/src/styles.scss
+++ b/packages/web/src/styles.scss
@@ -204,10 +204,16 @@ p {
     flex-direction: column;
   }
 }
+.changelog-row + .changelog-row {
+  .changelog-content,
+  .changelog-date {
+    padding-top: 48px;
+  }
+}
 .changelog-date {
   vertical-align: top;
   padding-bottom: 48px;
-  padding-top: 48px;
+  //padding-top: 48px;
   padding-right: 24px;
   width: 27%;
   display: flex;
@@ -225,7 +231,7 @@ p {
 }
 
 .changelog-content {
-  padding-top: 48px;
+  // padding-top: 48px;
   width: 75%;
   @include breakpoint-up(Mobile) {
     width: 100%;
